--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "nan": "^1.8.4",
     "npmconf": "^2.1.1",
     "pangyp": "^2.2.0",
-    "request": "^2.55.0",
+    "request": "2.81.1",
     "sass-graph": "^2.0.0"
   },
   "devDependencies": {
